--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,5 +9,11 @@ RUN ls -la /ui
 
 EXPOSE 3001
 ENV NODE_OPTIONS=--max-old-space-size=16384
-ENV NEXTJS_PATH=/ui
-CMD ["/bin/sh", "/bin/run.sh"]
+#ENV NEXTJS_PATH=/ui
+#WORKDIR /ui
+#CMD ["/bin/sh", "../bin/run.sh"]
+WORKDIR /ui
+RUN npm cache clean --force
+RUN npm i
+
+CMD ["npm", "run", "dev"]
