--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,8 @@ COPY ./ui /ui
 COPY ./bin /bin
 RUN ls -la /ui
 
-EXPOSE 3001
+EXPOSE 3004
 ENV NODE_OPTIONS=--max-old-space-size=16384
 ENV NEXTJS_PATH=/ui
+WORKDIR /ui
 CMD ["/bin/sh", "/bin/run.sh"]
