--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "10.4.16",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
+    "clerk": "^0.8.3",
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.12",
