--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -22,7 +22,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
-    "axios": "^1.7.4",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clerk": "^0.8.3",
     "clsx": "^2.0.0",
@@ -33,6 +33,7 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.14.1",
     "shadcn-ui": "^0.4.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "3.3.3",
