--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -33,6 +33,7 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.27.0",
     "react-spinners": "^0.14.1",
     "shadcn-ui": "^0.4.1",
     "tailwind-merge": "^2.0.0",
